--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
+
+# Editor/OS
+.vscode/
+.idea/
+.DS_Store
+*.env
+
+# Media files (if you don't want to version control user uploads)
+media/
